--- a/AsuntoDB_WPF/MainWindow.xaml
+++ b/AsuntoDB_WPF/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AsuntoDB" Height="450" Width="1000" MinHeight="450" MinWidth="900">
+    
     <DockPanel LastChildFill="True" >
         <StatusBar DockPanel.Dock="Bottom" Height="30">
             <StatusBarItem x:Name="sbItem" Content="Status"/>
@@ -9,7 +10,7 @@
         <TabControl HorizontalAlignment="Stretch" DockPanel.Dock="Top" VerticalAlignment="Stretch" Height="Auto">
             <TabItem Header="Asukkaat">
                 <Grid>
-                    <ListBox x:Name="lbHenkiloLista" Margin="0,0,0,40" HorizontalAlignment="Left" Width="189"/>
+                    <ListBox x:Name="lbHenkiloLista" Margin="0,0,0,40" HorizontalAlignment="Left" Width="189" ItemTemplate="{DynamicResource HenkiloTemplate}" SelectionChanged="lbHenkiloLista_SelectionChanged"/>
                     <Button x:Name="btnHenkiloUusi" Content="Uusi" Width="75" Margin="0,0,0,7" HorizontalAlignment="Left" Height="28" VerticalAlignment="Bottom"/>
                     <Button x:Name="btnHenkiloPoista" Content="Poista" Width="75" Margin="80,0,0,7" HorizontalAlignment="Left" Height="28" VerticalAlignment="Bottom"/>
 
@@ -25,7 +26,7 @@
                     <Label Content="Sukupuoli" Margin="195,164,0,0" Height="24" Width="100" VerticalAlignment="Top" HorizontalAlignment="Left"/>
                     <ComboBox x:Name="cbSukupuoli" HorizontalAlignment="Left" Margin="300,166,0,0" VerticalAlignment="Top" Width="188"/>
 
-                    <Button x:Name="btnHenkiloallenna" Content="Tallenna" HorizontalAlignment="Left" Margin="300,296,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button x:Name="btnHenkiloTallenna" Content="Tallenna" HorizontalAlignment="Left" Margin="300,296,0,0" VerticalAlignment="Top" Width="75"/>
                     <Button x:Name="btnHenkiloPeruuta" Content="Peruuta" HorizontalAlignment="Left" Margin="380,296,0,0" VerticalAlignment="Top" Width="75"/>
 
                     <Label Content="Henkilön asunto" Margin="558,0,0,0" FontSize="24" HorizontalAlignment="Left" Width="188" Height="45" VerticalAlignment="Top"/>
