--- a/AsuntoDB_WPF/MainWindow.xaml
+++ b/AsuntoDB_WPF/MainWindow.xaml
@@ -87,6 +87,12 @@
 
                 </Grid>
             </TabItem>
+            <TabItem Header="Asukaskooste">
+                <DataGrid x:Name="grdAsukaskooste" IsReadOnly="True"/>
+            </TabItem>
+            <TabItem Header="Sukupuolijakaupa">
+                <DataGrid x:Name="grdSukupuolijakauma" IsReadOnly="True"/>
+            </TabItem>
         </TabControl>
 
     </DockPanel>
